--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -504,7 +504,28 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "age_needed = pd.DataFrame(purchase_data, columns=[\"SN\",\"Age\",\"Purchase ID\",\"Price\"])\n",
+    "unique_age = age_needed.groupby(\"SN\").mean()\n",
+    "\n",
+    "great = unique_age[\"Age\"].max()\n",
+    "bins = [0, 9.9, 14.9, 19.9, 24.9, 29.9, 34.9, 39.9, great]\n",
+    "\n",
+    "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\",\"30-34\",\"35-39\",\"40+\"]\n",
+    "\n",
+    "unique_age[\"Age Bracket\"] = pd.cut(unique_age[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
+    "wholecount = unique_age[\"Age\"].count()\n",
+    "\n",
+    "unique_age = unique_age.groupby(\"Age Bracket\").count()\n",
+    "\n",
+    "unique_age[\"Percentage of Players\"] = (unique_age[\"Age\"] / wholecount) * 100\n",
+    "def format(x):\n",
+    "        return \"{:.2f}%\".format(x)\n",
+    "unique_age[\"Percentage of Players\"] = unique_age[\"Percentage of Players\"].apply(format)\n",
+    "unique_age = unique_age.drop(columns={\"Purchase ID\",\"Price\"})\n",
+    "\n",
+    "unique_age"
+   ]
   },
   {
    "cell_type": "markdown",
