--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -81,15 +81,19 @@
        "0            576"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get list of unique players\n",
     "uniqueplayer = purchase_data[\"SN\"].unique()\n",
+    "#get count of unqiue players (/length of list)\n",
     "uniqueplayer_count = len(uniqueplayer)\n",
+    "#put count into dataframe to print\n",
     "uniqueplayer_df = pd.DataFrame({\"Total Players\" : [uniqueplayer_count]})\n",
+    "#print data frame\n",
     "uniqueplayer_df"
    ]
   },
@@ -118,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -170,21 +174,30 @@
        "0     $2,379.77  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get number of unique items \n",
     "uniqueitems = purchase_data[\"Item ID\"].nunique()\n",
+    "\n",
+    "#get average price of purchased items\n",
     "avgprice = purchase_data[\"Price\"].mean()\n",
+    "\n",
+    "#get total number of purchases\n",
     "totalpurchases = purchase_data[\"Purchase ID\"].count()\n",
+    "\n",
+    "#get total revenue\n",
     "sumrevenue = purchase_data[\"Price\"].sum()\n",
     "\n",
+    "#put numbers into dataframe to print\n",
     "purchase_summary_df = pd.DataFrame({\"Number of Unique Items\" : [uniqueitems],\n",
     "                                   \"Average Purchase Price\" : [\"${:,.2f}\".format(avgprice)],\n",
     "                                   \"Total Number of Purchases\" : [totalpurchases],\n",
     "                                   \"Total Revenue\" : [\"${:,.2f}\".format(sumrevenue)]})\n",
+    "#print dataframe\n",
     "purchase_summary_df"
    ]
   },
@@ -212,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -273,26 +286,35 @@
        "Other / Non-Disclosed                      11                 1.91%"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get dataframe that only has each player once\n",
     "unique_gen_df = purchase_data.drop_duplicates(subset = \"SN\", keep = \"first\", inplace = False)\n",
     "\n",
+    "#count how many total people purchased something\n",
     "wholecount = unique_gen_df[\"Gender\"].count()\n",
+    "\n",
+    "#count how many purchasers there were by gender\n",
     "unique_df = unique_gen_df.groupby([\"Gender\"]).count()\n",
     "\n",
+    "#calculate percent of whole for each gender and add to dataframe\n",
     "unique_df[\"Percentage of Players\"] = (unique_df[\"Purchase ID\"] / wholecount) * 100\n",
+    "\n",
+    "#format column to %\n",
     "def format(x):\n",
     "        return \"{:.2f}%\".format(x)\n",
     "unique_df[\"Percentage of Players\"] = unique_df[\"Percentage of Players\"].apply(format)\n",
     "\n",
+    "#drop unneccessary columns,rename columns to immitate answer, and sort\n",
     "unique_df = unique_df.drop(columns={\"SN\",\"Age\",\"Item ID\",\"Item Name\",\"Price\"})\n",
     "unique_df = unique_df.rename(columns={\"Purchase ID\":\"Total Count of Players\"})\n",
     "unique_df = unique_df.sort_values(\"Total Count of Players\", ascending=False)\n",
     "\n",
+    "#print dataframe\n",
     "unique_df"
    ]
   },
@@ -324,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +423,13 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# The below each broken by gender\n",
+    "#get dataframe of the only columns necessary for question\n",
     "gender_needed = pd.DataFrame(purchase_data, columns=[\"SN\",\"Gender\",\"Purchase ID\",\"Price\"])\n",
     "\n",
     "# Purchase Count\n",
@@ -417,25 +439,34 @@
     "# Total Purchase Value\n",
     "tvp_gen = gender_needed.groupby([\"Gender\"]).sum()\n",
     "\n",
+    "#merge each answer's data frames together\n",
     "merge_gen = pd.DataFrame.merge(purcount_gen, avgprice_gen, on=\"Gender\",suffixes=(\"_count\",\"_avg\"))\n",
     "merge_gen2 = pd.DataFrame.merge(merge_gen, tvp_gen, on=\"Gender\",suffixes=(\"_merge\",\"_tvp\"))\n",
     "\n",
+    "#clean up merged df by dropping and renaming columns\n",
     "merge_gen2 = merge_gen2.drop(columns={\"Purchase ID_count\",\"Price_count\",\"Purchase ID_avg\",\"Purchase ID\"})\n",
     "merge_gen2 = merge_gen2.rename(columns={\"SN\":\"Purchase Count\",\"Price_avg\":\"Average Purchase Price\",\"Price\":\"Total Purchase Value\"})\n",
+    "\n",
+    "#merge with df used in previous question to get number of unique purchasers\n",
     "merge_gen3 = pd.DataFrame.merge(merge_gen2, unique_df, on=\"Gender\")\n",
     "\n",
     "# Average Purchase Total per Person by Gender\n",
     "merge_gen3[\"Avg Total Purchase per Person\"] = (merge_gen3[\"Total Purchase Value\"] / merge_gen3[\"Total Count of Players\"])\n",
+    "\n",
+    "#clean up merged df by dropping unecessary columns\n",
     "merge_gen3 = merge_gen3.drop(columns={\"Total Count of Players\"})\n",
     "\n",
+    "#format columns to $\n",
     "def format(x):\n",
     "        return \"${:.2f}\".format(x)\n",
     "merge_gen3[\"Average Purchase Price\"] = merge_gen3[\"Average Purchase Price\"].apply(format)\n",
     "merge_gen3[\"Total Purchase Value\"] = merge_gen3[\"Total Purchase Value\"].apply(format)\n",
     "merge_gen3[\"Avg Total Purchase per Person\"] = merge_gen3[\"Avg Total Purchase per Person\"].apply(format)\n",
     "\n",
+    "#drop unecessary column\n",
     "merge_gen3 = merge_gen3.drop(columns={\"Percentage of Players\"})\n",
     "\n",
+    "#print df\n",
     "merge_gen3"
    ]
   },
@@ -470,19 +501,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ashtonsmith/anaconda3/envs/PythonData/lib/python3.6/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "/Users/ashtonsmith/anaconda3/envs/PythonData/lib/python3.6/site-packages/ipykernel_launcher.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \n"
+      "  # This is added back by InteractiveShellApp.init_path()\n"
      ]
     },
     {
@@ -573,32 +604,43 @@
        "40+                              12                 2.08%"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get dataframe that only has each player once\n",
     "unique_age_df = purchase_data.drop_duplicates(subset = \"SN\", keep = \"first\", inplace = False)\n",
     "\n",
+    "#get max age\n",
     "great = unique_age_df[\"Age\"].max()\n",
+    "#set bins to range from 0 to the max age\n",
     "bins = [0, 9.9, 14.9, 19.9, 24.9, 29.9, 34.9, 39.9, great]\n",
-    "\n",
+    "#establish names for each bin\n",
     "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\",\"30-34\",\"35-39\",\"40+\"]\n",
-    "\n",
+    "#give data a category based on age\n",
     "unique_age_df[\"Age Bracket\"] = pd.cut(unique_age_df[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
+    "\n",
+    "#count total purchasers\n",
     "wholecount = unique_age_df[\"Age\"].count()\n",
     "\n",
+    "#get count for each age range\n",
     "unique_age_df = unique_age_df.groupby([\"Age Bracket\"]).count()\n",
     "\n",
+    "#calculate percent of whole for each age range and add to dataframe\n",
     "unique_age_df[\"Percentage of Players\"] = (unique_age_df[\"Purchase ID\"] / wholecount) * 100\n",
+    "\n",
+    "#format column to %\n",
     "def format(x):\n",
     "        return \"{:.2f}%\".format(x)\n",
     "unique_age_df[\"Percentage of Players\"] = unique_age_df[\"Percentage of Players\"].apply(format)\n",
     "\n",
+    "#drop unneccessary columns and rename columns to immitate answer\n",
     "unique_age_df = unique_age_df.drop(columns={\"SN\",\"Age\",\"Item ID\",\"Item Name\",\"Price\",\"Gender\"})\n",
     "unique_age_df = unique_age_df.rename(columns={\"Purchase ID\":\"Total Count of Players\"})\n",
     "\n",
+    "#print df\n",
     "unique_age_df"
    ]
   },
@@ -630,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -752,20 +794,22 @@
        "40+                                 $3.19  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# The below each broken by gender\n",
+    "#get dataframe of the only columns necessary for question\n",
     "age_needed = pd.DataFrame(purchase_data, columns=[\"SN\",\"Purchase ID\",\"Price\",\"Age\"])\n",
     "\n",
+    "#get max age\n",
     "great = age_needed[\"Age\"].max()\n",
+    "#set bins to range from 0 to the max age\n",
     "bins = [0, 9.9, 14.9, 19.9, 24.9, 29.9, 34.9, 39.9, great]\n",
-    "\n",
+    "#establish names for each bin\n",
     "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\",\"30-34\",\"35-39\",\"40+\"]\n",
-    "\n",
+    "#give data a category based on age\n",
     "age_needed[\"Age Bracket\"] = pd.cut(age_needed[\"Age\"], bins, labels=group_names, include_lowest=True)\n",
     "\n",
     "# Purchase Count\n",
@@ -775,23 +819,31 @@
     "# Total Purchase Value\n",
     "tvp_age = age_needed.groupby([\"Age Bracket\"]).sum()\n",
     "\n",
+    "#merge each answer's data frames together\n",
     "merge_age = pd.DataFrame.merge(purcount_age, avgprice_age, on=\"Age Bracket\",suffixes=(\"_count\",\"_avg\"))\n",
     "merge_age2 = pd.DataFrame.merge(merge_age, tvp_age, on=\"Age Bracket\",suffixes=(\"_merge\",\"_tvp\"))\n",
     "\n",
+    "#clean up merged df by dropping and renaming columns\n",
     "merge_age2 = merge_age2.drop(columns={\"Purchase ID_count\",\"Price_count\",\"Purchase ID_avg\",\"Purchase ID\"})\n",
     "merge_age2 = merge_age2.rename(columns={\"SN\":\"Purchase Count\",\"Price_avg\":\"Average Purchase Price\",\"Price\":\"Total Purchase Value\"})\n",
+    "\n",
+    "#merge with df used in previous question to get number of unique purchasers\n",
     "merge_age3 = pd.DataFrame.merge(merge_age2, unique_age_df, on=\"Age Bracket\")\n",
     "\n",
-    "# Average Purchase Total per Person by Gender\n",
+    "# Average Purchase Total per Person by age range\n",
     "merge_age3[\"Avg Total Purchase per Person\"] = (merge_age3[\"Total Purchase Value\"] / merge_age3[\"Total Count of Players\"])\n",
+    "\n",
+    "#clean up merged df by dropping unecessary columns\n",
     "merge_age3 = merge_age3.drop(columns={\"Total Count of Players\",\"Percentage of Players\",\"Age\",\"Age_avg\",\"Age_count\"})\n",
     "\n",
+    "#formatted to $\n",
     "def format(x):\n",
     "        return \"${:.2f}\".format(x)\n",
     "merge_age3[\"Average Purchase Price\"] = merge_age3[\"Average Purchase Price\"].apply(format)\n",
     "merge_age3[\"Total Purchase Value\"] = merge_age3[\"Total Purchase Value\"].apply(format)\n",
     "merge_age3[\"Avg Total Purchase per Person\"] = merge_age3[\"Avg Total Purchase per Person\"].apply(format)\n",
     "\n",
+    "#print df\n",
     "merge_age3"
    ]
   },
@@ -824,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -904,32 +956,41 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get dataframe of the only columns necessary for question\n",
     "player_needitem_df = pd.DataFrame(purchase_data, columns=[\"SN\",\"Purchase ID\",\"Price\"])\n",
     "\n",
+    "#purchase count\n",
     "player_purchase_count = player_needitem_df.groupby(\"SN\").count()\n",
+    "#average purchase price\n",
     "player_tvp = player_needitem_df.groupby(\"SN\").sum()\n",
+    "#total purchase value\n",
     "player_average = player_needitem_df.groupby(\"SN\").mean()\n",
     "\n",
+    "#merge answers into one data frame\n",
     "player_merge1 = pd.DataFrame.merge(player_purchase_count, player_tvp, on=\"SN\", suffixes=(\"_count\",\"_tvp\"))\n",
     "player_merge2 = pd.DataFrame.merge(player_merge1, player_average, on=\"SN\", suffixes=(\"\",\"_average\"))\n",
+    "\n",
+    "#clean up merged df by dropping unecessary columns, renaming columns, and sorting\n",
     "player_merge2 = player_merge2.drop(columns={\"Purchase ID_tvp\",\"Price_count\",\"Purchase ID\"})\n",
     "player_merge2 = player_merge2.rename(columns={\"Purchase ID_count\":\"Purchase Count\",\"Price\":\"Average Purchase Price\",\"Price_tvp\":\"Total Purchase Value\"})\n",
-    "\n",
     "player_merge2 = player_merge2.sort_values(\"Total Purchase Value\", ascending=False)\n",
     "\n",
+    "#resest df to only include certain columns\n",
     "player_merge2 = player_merge2[[\"Purchase Count\", \"Average Purchase Price\", \"Total Purchase Value\"]]\n",
     "\n",
+    "#format columns to $\n",
     "def format(x):\n",
     "        return \"${:.2f}\".format(x)\n",
     "player_merge2['Average Purchase Price'] = player_merge2['Average Purchase Price'].apply(format)\n",
     "player_merge2['Total Purchase Value'] = player_merge2['Total Purchase Value'].apply(format)\n",
     "\n",
+    "#print top 5 of data frame\n",
     "player_merge2.head(5)"
    ]
   },
@@ -965,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1068,31 +1129,38 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get dataframe of the only columns necessary for question\n",
     "popneeditem_df = pd.DataFrame(purchase_data, columns=[\"Item ID\",\"Item Name\",\"Price\"])\n",
     "\n",
+    "#total purchase value\n",
     "pop_tvp = popneeditem_df.groupby([\"Item ID\",\"Item Name\"]).sum()\n",
+    "#purchase count\n",
     "pop_item_purcount = popneeditem_df.groupby([\"Item ID\",\"Item Name\"]).count()\n",
+    "#item price\n",
     "pop_itemprice = popneeditem_df.groupby([\"Item ID\",\"Item Name\"]).mean()\n",
     "\n",
+    "#merge answers into one data frame\n",
     "pop_merge1 = pd.DataFrame.merge(pop_tvp, pop_item_purcount, on=[\"Item ID\",\"Item Name\"])\n",
     "pop_merge2 = pd.DataFrame.merge(pop_merge1, pop_itemprice, on=[\"Item ID\",\"Item Name\"])\n",
+    "\n",
+    "#clean up merged df by dropping unecessary columns, renaming columns, and sorting\n",
     "pop_merge2 = pop_merge2.rename(columns={\"Price_x\":\"Total Purchase Value\",\"Price_y\":\"Purchase Count\",\"Price\":\"Item Price\"})\n",
     "pop_merge2 = pop_merge2[[\"Purchase Count\",\"Item Price\", \"Total Purchase Value\"]]\n",
-    "\n",
     "pop_merge2 = pop_merge2.sort_values(\"Purchase Count\", ascending=False)\n",
     "\n",
+    "#format columns to $\n",
     "def format(x):\n",
     "    return \"${:.2f}\".format(x)\n",
-    "\n",
     "pop_merge2['Total Purchase Value'] = pop_merge2['Total Purchase Value'].apply(format)\n",
     "pop_merge2['Item Price'] = pop_merge2['Item Price'].apply(format)\n",
     "\n",
+    "#print top 5 in df\n",
     "pop_merge2.head(5)"
    ]
   },
@@ -1119,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -1224,31 +1292,38 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get dataframe of the only columns necessary for question\n",
     "needitem_df = pd.DataFrame(purchase_data, columns=[\"Item ID\",\"Item Name\",\"Price\"])\n",
     "\n",
+    "#total purchase value\n",
     "tvp = needitem_df.groupby([\"Item ID\",\"Item Name\"]).sum()\n",
+    "#purchase count\n",
     "item_purcount = needitem_df.groupby([\"Item ID\",\"Item Name\"]).count()\n",
+    "#item price\n",
     "itemprice = needitem_df.groupby([\"Item ID\",\"Item Name\"]).mean()\n",
     "\n",
+    "#merge answers into one data frame\n",
     "merge1 = pd.DataFrame.merge(tvp, item_purcount, on=[\"Item ID\",\"Item Name\"])\n",
     "merge2 = pd.DataFrame.merge(merge1, itemprice, on=[\"Item ID\",\"Item Name\"])\n",
+    "\n",
+    "#clean up merged df by dropping unecessary columns, renaming columns, and sorting\n",
     "merge2 = merge2.rename(columns={\"Price_x\":\"Total Purchase Value\",\"Price_y\":\"Purchase Count\",\"Price\":\"Item Price\"})\n",
     "merge2 = merge2[[\"Purchase Count\",\"Item Price\", \"Total Purchase Value\"]]\n",
-    "\n",
     "merge2 = merge2.sort_values(\"Total Purchase Value\", ascending=False)\n",
     "\n",
+    "#format columns to $\n",
     "def format(x):\n",
     "    return \"${:.2f}\".format(x)\n",
-    "\n",
     "merge2['Total Purchase Value'] = merge2['Total Purchase Value'].apply(format)\n",
     "merge2['Item Price'] = merge2['Item Price'].apply(format)\n",
     "\n",
+    "#print top 5 in df\n",
     "merge2.head(5)"
    ]
   }
